# haribote-rs

./: Cargo.toml  README.md  Taskfile.yml  i686-haribote.json  kernel.ld
.cargo/: config
asm/: asmhead.asm  ipl.asm
src/: asm.rs  font.rs  int.rs  lib.rs  sgm.rs  vga.rs
